@@ -650,6 +650,9 @@
 #define __NR_setgroups           596
 #endif
 
+#define __NR_jail_attach_jd      597
+#define __NR_jail_remove_jd      598
+
 #define __NR_fake_sigreturn      1000
 
 #endif /* VKI_UNISTD_FREEBSD_H */
